plugins {
    id 'org.springframework.boot' version '3.2.4'
    id 'io.spring.dependency-management' version '1.1.4'

    id 'java'
}

allprojects {
    group = 'com.ys'
    version = '0.0.1-SNAPSHOT'
    sourceCompatibility = '21'

    repositories {
        mavenCentral()
    }
}

subprojects {
    compileJava.options.encoding = 'UTF-8'

    apply plugin: 'java-library' //하위 모듈이 상위 모듈의 라이브러리를 의존할 수 있게 하는 플러그인
//    apply plugin: 'io.spring.dependency-management'
//    apply plugin: 'org.springframework.boot'

    test {
        useJUnitPlatform()
    }

    dependencies {

        implementation("ch.qos.logback:logback-classic:1.4.11")

        implementation 'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok'
        testImplementation 'org.projectlombok:lombok'
        testAnnotationProcessor('org.projectlombok:lombok')
    }

    configurations {
        compileOnly {
            extendsFrom annotationProcessor
        }
    }

    tasks.named('test') {
        useJUnitPlatform()
    }

    tasks.withType(JavaCompile) {
        options.encoding = 'UTF-8'
        options.compilerArgs += '--enable-preview' // 프리뷰 해야지 구조적 동시성 사용 가능
    }

}

